<resources>
    <string name="app_name">News-Retro</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="query_group1">Query Group 1</string>
    <string name="query_group2">Query Group 2</string>
    <string name="item_image">Item Image</string>
    <string name="news_image">News Image</string>
    <string name="add_new_query">Add new query</string>
    <string name="query_to_search">Query to search</string>
    <string name="remove">Remove</string>
    <string name="search_both_queries">Search Both Queries</string>
    <string name="enter_your_email_id">Enter your email ID</string>
    <string name="enter_the_password">Enter the password</string>
    <string name="submit">Submit</string>

    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    <string name="fine_location_permission_rationale">The fine location permission is needed for core functionality.</string>
    <string name="fine_permission_denied_explanation">Fine location permission was denied, but is needed for core functionality.</string>
    <string name="background_location_permission_rationale">The background location permission is needed for enhanced functionality.</string>
    <string name="background_permission_denied_explanation">Background location permission was denied but needed for enhanced functionality.</string>
    <string name="start_receiving_locations">Start Receiving Locations</string>
    <string name="stop_receiving_locations">Stop Receiving Locations</string>
    <string name="receiving_locations_text">Receiving location updates currently</string>
    <string name="not_receiving_locations_state">Not receiving any updates</string>

    <string name="start_location_updates_button_text">Start receiving location updates</string>
    <string name="stop_location_updates_button_text">Stop receiving location updates</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="preference_file_key">com.aadi.kotlinRetrofitMvvm.locationCodes.PREFERENCE_FILE_KEY</string>
    <string name="no_location_text">No current location</string>
    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location Unknown</string>
    <string name="location_updates_label">Location Updates</string>
    <string name="title_activity_maps">Map</string>
    <string name="select_a_marker_to_see_time">Select a marker to see time</string>
</resources>
