<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.LoginActivity"
        android:background="@color/colorPrimary">


    <RelativeLayout
            android:id="@+id/relative_layout_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/loginEmailAddress"
                android:hint="@string/enter_your_email_id"
                android:textStyle="bold|italic"
                android:textSize="20sp"
                android:layout_margin="10sp"
                android:layout_centerVertical="true"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:importantForAutofill="no"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true" />

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/loginEmailPassword"
                android:hint="@string/enter_the_password"
                android:textStyle="bold|italic"
                android:textSize="20sp"
                android:layout_margin="20sp"
                android:layout_centerVertical="true"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:layout_below="@id/loginEmailAddress"
                android:layout_alignParentStart="true"
                android:importantForAutofill="no" />

        <Button
                android:text="@string/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginButton"
                android:layout_below="@id/loginEmailPassword"
                android:textAllCaps="true"
                android:textStyle="bold|italic"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:backgroundTint="@color/colorButtonContainer"
                android:padding="10sp"
                android:layout_centerHorizontal="true"/>

    </RelativeLayout>




</androidx.constraintlayout.widget.ConstraintLayout>