<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MainActivity">

    <RelativeLayout
            android:id="@+id/relative_layout_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <TextView
                android:id="@+id/query_group_text"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:textAllCaps="true"
                android:textStyle="bold|italic"
                android:textSize="20sp"
                android:padding="10sp"
                android:textColor="@color/colorAccent"
                android:text="@string/query_group1"
                tools:ignore="RelativeOverlap" />

        <androidx.appcompat.widget.SwitchCompat
                app:splitTrack="true"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:padding="10sp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:id="@+id/query_group_switch" />

        <Button
                android:id="@+id/query_add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new_query"
                android:textAllCaps="true"
                android:textStyle="bold|italic"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:layout_below="@id/query_group_text"
                android:background="#80FFFFFF"
                android:padding="5sp"
                android:layout_centerHorizontal="true" />

        <LinearLayout
                android:id="@+id/linear_layout_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_below="@id/query_add_button"
                tools:ignore="UselessLeaf" />

        <Button
                android:id="@+id/query_submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_both_queries"
                android:textAllCaps="true"
                android:textStyle="bold|italic"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:layout_below="@id/linear_layout_main"
                android:background="#80FFFFFF"
                android:padding="5sp"
                android:layout_centerHorizontal="true"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>