<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MapActivity">

    <RelativeLayout
            android:id="@+id/relative_layout_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/map"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/locationStatusView"
                android:textAllCaps="true"
                android:textStyle="bold|italic"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:padding="10sp"
                android:maxLines="2"
                android:lines="1"
                android:gravity="start"
                android:layout_centerHorizontal="true" />

        <Button
                android:text="@string/start_receiving_locations"
                android:id="@+id/startLocationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textStyle="bold|italic"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:backgroundTint="@color/colorButtonContainer"
                android:layout_below="@id/locationStatusView"
                android:padding="5sp"
                android:layout_centerHorizontal="true" />

        <Button
                android:text="@string/stop_receiving_locations"
                android:id="@+id/stopLocationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textStyle="bold|italic"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:layout_below="@id/startLocationButton"
                android:backgroundTint="@color/colorButtonContainer"
                android:padding="5sp"
                android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <androidx.fragment.app.FragmentContainerView
            app:layout_constraintTop_toBottomOf="@id/relative_layout_main"
            app:layout_constraintBottom_toTopOf="@id/locationTimeTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/map"
            tools:context=".view.MapActivity"
            android:name="com.google.android.gms.maps.SupportMapFragment" >
    </androidx.fragment.app.FragmentContainerView>

    <TextView
            android:text="@string/select_a_marker_to_see_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/locationTimeTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/map"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textAllCaps="true"
            android:textStyle="bold|italic"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:padding="10sp"
            android:textAlignment="center"
            android:layout_centerHorizontal="true" />

</androidx.constraintlayout.widget.ConstraintLayout>